src/parser/prisma.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Schema: peg$parseSchema },
      peg$startRuleFunction  = peg$parseSchema,

      peg$c0 = function(elements) {
        return elements.filter(e => e !== null && e.type !== 'comment');
      },
      peg$c1 = "datasource",
      peg$c2 = peg$literalExpectation("datasource", false),
      peg$c3 = "{",
      peg$c4 = peg$literalExpectation("{", false),
      peg$c5 = "}",
      peg$c6 = peg$literalExpectation("}", false),
      peg$c7 = function(identifier, assignments) {
        const block = { type: "datasource", name: identifier, assignments: {} };
        assignments.forEach(a => {
          if (a) block.assignments[a.key] = a.value;
        });
        return block;
      },
      peg$c8 = "generator",
      peg$c9 = peg$literalExpectation("generator", false),
      peg$c10 = function(identifier, assignments) {
        const block = { type: "generator", name: identifier, assignments: {} };
        assignments.forEach(a => {
          if (a) block.assignments[a.key] = a.value;
        });
        return block;
      },
      peg$c11 = "model",
      peg$c12 = peg$literalExpectation("model", false),
      peg$c13 = function(modelName, fields, modelAttributes) {
        return {
          type: "model",
          name: modelName,
          fields: fields.filter(f => f !== null),
          attributes: modelAttributes.filter(a => a !== null)
        };
      },
      peg$c14 = "@@",
      peg$c15 = peg$literalExpectation("@@", false),
      peg$c16 = "(",
      peg$c17 = peg$literalExpectation("(", false),
      peg$c18 = ")",
      peg$c19 = peg$literalExpectation(")", false),
      peg$c20 = function(attributeName, argumentsGroup) {
        let finalArgs = null;
        if (argumentsGroup) {
          finalArgs = argumentsGroup[2]; // argValue is the result of ParsedAttributeArgument? at index 2
        }

        // Process arguments based on attribute type
        finalArgs = processAttributeArgs(attributeName, finalArgs);

        return {
          name: attributeName,
          args: finalArgs
        };
      },
      peg$c21 = function(fieldName, fieldType, attributes) {
        return { name: fieldName, type: fieldType, attributes: attributes };
      },
      peg$c22 = "[]",
      peg$c23 = peg$literalExpectation("[]", false),
      peg$c24 = "?",
      peg$c25 = peg$literalExpectation("?", false),
      peg$c26 = function(typeName, arrayMarker, optionalMarker) {
        return {
          name: typeName,
          optional: optionalMarker === "?",
          isArray: arrayMarker === "[]"
        };
      },
      peg$c27 = "@",
      peg$c28 = peg$literalExpectation("@", false),
      peg$c29 = function(attributeName, argumentsGroup) {
        let finalArgs = null;
        if (argumentsGroup) {
          finalArgs = argumentsGroup[2]; // argValue is the result of ParsedAttributeArgument? at index 2
        }

        // Process arguments based on attribute type
        finalArgs = processAttributeArgs(attributeName, finalArgs);

        // Handle attributes that typically don't have arguments
        if (argumentsGroup === undefined && (attributeName === "id" || attributeName === "unique" || attributeName === "updatedAt")) {
          finalArgs = null;
        }

        return {
          name: attributeName,
          args: finalArgs
        };
      },
      peg$c30 = function(name, args) {
            return {
              function: name,
              args: args || []
            };
          },
      peg$c31 = "autoincrement",
      peg$c32 = peg$literalExpectation("autoincrement", false),
      peg$c33 = "now",
      peg$c34 = peg$literalExpectation("now", false),
      peg$c35 = "uuid",
      peg$c36 = peg$literalExpectation("uuid", false),
      peg$c37 = "cuid",
      peg$c38 = peg$literalExpectation("cuid", false),
      peg$c39 = "dbgenerated",
      peg$c40 = peg$literalExpectation("dbgenerated", false),
      peg$c41 = "sequence",
      peg$c42 = peg$literalExpectation("sequence", false),
      peg$c43 = "auto",
      peg$c44 = peg$literalExpectation("auto", false),
      peg$c45 = "nanoid",
      peg$c46 = peg$literalExpectation("nanoid", false),
      peg$c47 = "enum",
      peg$c48 = peg$literalExpectation("enum", false),
      peg$c49 = function(enumName, enumValues) {
        return { type: "enum", name: enumName, values: enumValues.filter(v => v !== null) };
      },
      peg$c50 = function(valueName) { return valueName; },
      peg$c51 = "type",
      peg$c52 = peg$literalExpectation("type", false),
      peg$c53 = function(typeName, fields) {
        return { type: "type", name: typeName, fields: fields.filter(f => f !== null) };
      },
      peg$c54 = "view",
      peg$c55 = peg$literalExpectation("view", false),
      peg$c56 = function(viewName, fields, viewAttributes) {
        return {
          type: "view",
          name: viewName,
          fields: fields.filter(f => f !== null),
          attributes: viewAttributes.filter(a => a !== null)
        };
      },
      peg$c57 = function(args) { return args; },
      peg$c58 = ",",
      peg$c59 = peg$literalExpectation(",", false),
      peg$c60 = function(first, next) { return next; },
      peg$c61 = function(first, args) {
        const result = {};
        result[first.name] = first.value;
        args.forEach(arg => {
          if (arg) result[arg.name] = arg.value;
        });
        return result;
      },
      peg$c62 = ":",
      peg$c63 = peg$literalExpectation(":", false),
      peg$c64 = function(argName, argValue) {
        return { name: argName, value: argValue };
      },
      peg$c65 = "fields",
      peg$c66 = peg$literalExpectation("fields", false),
      peg$c67 = "references",
      peg$c68 = peg$literalExpectation("references", false),
      peg$c69 = "name",
      peg$c70 = peg$literalExpectation("name", false),
      peg$c71 = "onDelete",
      peg$c72 = peg$literalExpectation("onDelete", false),
      peg$c73 = "onUpdate",
      peg$c74 = peg$literalExpectation("onUpdate", false),
      peg$c75 = function(name) { return name; },
      peg$c76 = "[",
      peg$c77 = peg$literalExpectation("[", false),
      peg$c78 = function(firstId, nextId) { return nextId; },
      peg$c79 = "]",
      peg$c80 = peg$literalExpectation("]", false),
      peg$c81 = function(firstId, restOfIds) {
        if (firstId === null) { // Handles empty list like []
          return [];
        }
        const all = [firstId];
        restOfIds.forEach(id => all.push(id));
        return all;
      },
      peg$c82 = "Cascade",
      peg$c83 = peg$literalExpectation("Cascade", false),
      peg$c84 = "Restrict",
      peg$c85 = peg$literalExpectation("Restrict", false),
      peg$c86 = "SetNull",
      peg$c87 = peg$literalExpectation("SetNull", false),
      peg$c88 = "NoAction",
      peg$c89 = peg$literalExpectation("NoAction", false),
      peg$c90 = "SetDefault",
      peg$c91 = peg$literalExpectation("SetDefault", false),
      peg$c92 = function(kw) { return kw; },
      peg$c93 = function() {
        return text(); // Revert to text() to see if it handles concatenation differently
      },
      peg$c94 = function(content) { return "(" + (content !== null ? content : "") + ")"; },
      peg$c95 = function(content) { return "[" + (content !== null ? content : "") + "]"; },
      peg$c96 = "\\",
      peg$c97 = peg$literalExpectation("\\", false),
      peg$c98 = "//",
      peg$c99 = peg$literalExpectation("//", false),
      peg$c100 = peg$anyExpectation(),
      peg$c101 = function(char) { return char; },
      peg$c102 = function(escChar) { return "\\" + escChar; },
      peg$c103 = "=",
      peg$c104 = peg$literalExpectation("=", false),
      peg$c105 = function(key, value) { // Allow more types for generator/datasource values
        return { key: key, value: value };
      },
      peg$c106 = "env",
      peg$c107 = peg$literalExpectation("env", false),
      peg$c108 = function(varName) {
        return `env("${varName}")`;
      },
      peg$c109 = peg$otherExpectation("identifier"),
      peg$c110 = /^[a-zA-Z_]/,
      peg$c111 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c112 = /^[a-zA-Z0-9_]/,
      peg$c113 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c114 = function() { return text(); },
      peg$c115 = peg$otherExpectation("string"),
      peg$c116 = "\"",
      peg$c117 = peg$literalExpectation("\"", false),
      peg$c118 = function(chars) { return chars.join(""); },
      peg$c119 = "'",
      peg$c120 = peg$literalExpectation("'", false),
      peg$c121 = function(esc) { return esc; },
      peg$c122 = "n",
      peg$c123 = peg$literalExpectation("n", false),
      peg$c124 = function() { return "\n"; },
      peg$c125 = "r",
      peg$c126 = peg$literalExpectation("r", false),
      peg$c127 = function() { return "\r"; },
      peg$c128 = "t",
      peg$c129 = peg$literalExpectation("t", false),
      peg$c130 = function() { return "\t"; },
      peg$c131 = "b",
      peg$c132 = peg$literalExpectation("b", false),
      peg$c133 = function() { return "\b"; },
      peg$c134 = "f",
      peg$c135 = peg$literalExpectation("f", false),
      peg$c136 = function() { return "\f"; },
      peg$c137 = function() { return '"'; },
      peg$c138 = function() { return "'"; },
      peg$c139 = function() { return "\\"; },
      peg$c140 = peg$otherExpectation("number"),
      peg$c141 = ".",
      peg$c142 = peg$literalExpectation(".", false),
      peg$c143 = /^[0-9]/,
      peg$c144 = peg$classExpectation([["0", "9"]], false, false),
      peg$c145 = function(float) { return parseFloat(text()); },
      peg$c146 = peg$otherExpectation("boolean"),
      peg$c147 = "true",
      peg$c148 = peg$literalExpectation("true", false),
      peg$c149 = function() { return true; },
      peg$c150 = "false",
      peg$c151 = peg$literalExpectation("false", false),
      peg$c152 = function() { return false; },
      peg$c153 = peg$otherExpectation("whitespace"),
      peg$c154 = peg$otherExpectation("mandatory_whitespace"),
      peg$c155 = /^[ \t\n\r]/,
      peg$c156 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c157 = /^[^\n]/,
      peg$c158 = peg$classExpectation(["\n"], true, false),
      peg$c159 = "\n",
      peg$c160 = peg$literalExpectation("\n", false),
      peg$c161 = function() { return { type: "comment", value: text() }; },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseSchema() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseBlock();
      if (s3 === peg$FAILED) {
        s3 = peg$parseCommentLine();
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseBlock();
        if (s3 === peg$FAILED) {
          s3 = peg$parseCommentLine();
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlock() {
    var s0;

    s0 = peg$parseDatasourceBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseGeneratorBlock();
      if (s0 === peg$FAILED) {
        s0 = peg$parseModelBlock();
        if (s0 === peg$FAILED) {
          s0 = peg$parseEnumBlock();
          if (s0 === peg$FAILED) {
            s0 = peg$parseTypeBlock();
            if (s0 === peg$FAILED) {
              s0 = peg$parseViewBlock();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseDatasourceBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 10) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 10;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseIdentifier();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 123) {
                s6 = peg$c3;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c4); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parseAssignment();
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parseAssignment();
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parse_();
                    if (s9 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s10 = peg$c5;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parse_();
                        if (s11 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c7(s4, s8);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGeneratorBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
